--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fake-web-socket-server": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-media-recorder": "^1.6.6",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.8",
